# Fahrtenprogramm-Generator

./: .gitignore  2023.fahrten  2023.tex  Ansprechpartner.py  DateTime.py  EditFahrten.py  Editsparten.py  Export.py  README.md  TeXport.py  TextEntry.py  basicgui.py  changedictlist.py  export.ics  gui.py  preamble.tex  pyproject.toml  test.fahrten  test.py  test.tex
appearancespecific/: preamble.tex
output/: 2023.fahrten  2023.tex
